# puzzles

./: .gitignore
HackerRankCPlusPlus/: avarage_values.cpp  basic_data_types.cpp  conditional_statements  counting_stuff.cpp  earth_to_moon_weights.cpp  feet_to_meter_table.cpp  feet_to_meters.cpp  for_loop.cpp  for_loop_demo.cpp  functions.cpp  hello.cpp  input_and_output.cpp  jovian_year.cpp  meters_to_feet.cpp  patrickhuber.docx  rectangle.cpp
HackerRankMachineLearning/: n_puzzle-hacker_rank.py  n_puzzle.py  n_puzzles_animation.py  optimated_animation.py  save_n_puzzle-hacker_rank.py
HackerRankPython/: alphabet_rangoli.py  arithmetic_operators.py  capitalize.py  designer_door_map.py  division.py  find_a_string.py  finding_percentage.py  function.py  if_else.py  lists.py  loops.py  minion_game.py  mutations_string.py  nested_lists.py  no_grad_demo.py  output.txt  print.py  runner_up_score.py  split_and_join.py  string_formattting,py  string_validators.py  swap_chases.py  text_allignement.py  text_wrap.py  tuples.py  whats_your_name.py
HighPerformanceC++/: book.cpp  const_correctness.cpp  hamlet.cpp  initializer_list.cpp  make_average.cpp  make_sum.cpp  reserve_besidpiel.cpp
HighPerformanceC++/cpp_project_template/: CMakeLists.txt  car.cpp  car.hpp  main.cpp  utils.cpp  utils.hpp
Kombinatorik_Statistik_Wahrscheinlichkeit/permutation_ohne_wiederholung/: CMakeLists.txt  make  menue.cpp  menue.hpp  permutation_ohne_wiederholung.cpp  permutations.cpp  permutations.hpp  read_input.hpp
ProfessionalC++/: add_numbers.cpp  addition.cpp  addition_c23.cpp  arrays.cpp  (+40 more)
(+10 files in other folders)
